Changelog for plone.app.layout

    (name of developer listed in brackets)


plone.app.layout - 1.0.7 UNRELEASED


plone.app.layout - 1.0.6 Released September 23rd, 2010

    - Displaying 'Anonymous User' also when the comment creator is an empty
      string. This fixes http://dev.plone.org/plone/ticket/7712.
      [rsantos]

    - Added i18n markup to nextprevious.pt.
      This closes http://dev.plone.org/plone/ticket/7537.
      [hannosch]

    - Catch KeyError for presentation or tableContents when document
      has an out-of-date schema.  Can happen when migrating from Plone
      2.5 to 3.0. Fall back to False for those attributes then.
      [maurits]

    - Fixed @@plone_context_state.view_template_id handling of content that
      does not implement IBrowserDefault (Products.CMFDynamicViewFTI). It was
      possible for this code to raise Unauthorized even when the user had
      permission to access the default view of the current context.
      [mj]


plone.app.layout - 1.0.5 Released January 3rd, 2008

    - Do not create an empty <ul> in the personal actions bar if there are
      no items in it. This fixes an XHTML syntax error.
      [wichert]

plone.app.layout - 1.0.4 Released December 6th, 2007

    - Added i18n domain to comment.pt.
      [martior]

    - Allow non ascii characters in webstats_js code. 
      Fixes http://dev.plone.org/plone/ticket/7359
      [naro]

    - Fixed workflow history viewlet to handle entries with
      usernames that don't exist any more (deleted users) and 
      also anonymous users.
      This fixes http://dev.plone.org/plone/ticket/7250.
      [rsantos]

plone.app.layout - 1.0.3 Released

    - Made getIcon urls relative to portal root.
      [tesdal]

plone.app.layout - 1.0.2 Released

    - Fixed getIcon code for use with ++resource++ and to use a safer method
      of getting the correct url.
      [optilude]

    - Upgraded the sitemap template to conform with the 0.9 specs from